--- a/frontend/src/app/components/pagination/pagination.component.html
+++ b/frontend/src/app/components/pagination/pagination.component.html
@@ -1,3 +1,3 @@
-<ngb-pagination [collectionSize]="data.length" [(page)]="curPage" [pageSize]="this.limit" [boundaryLinks]="true"
-    [maxSize]="6" (pageChange)="PageChanged($event)">
+<ngb-pagination [collectionSize]="length" [(page)]="curPage" [pageSize]="this.limit" [boundaryLinks]="true"
+    [maxSize]="5" (pageChange)="PageChanged($event)">
 </ngb-pagination>
