--- a/frontend/src/app/components/pagination/pagination.component.scss
+++ b/frontend/src/app/components/pagination/pagination.component.scss
@@ -3,7 +3,7 @@ ngb-pagination ::ng-deep .pagination {
     text-align: center;
 }
 ngb-pagination ::ng-deep .pagination a {
-    width: 40px;
+    // width: 40px;
     height: 40px;
     display: inline-block;
     text-align: center;
