--- a/frontend/src/app/components/featured-card/featured-card.component.html
+++ b/frontend/src/app/components/featured-card/featured-card.component.html
@@ -2,7 +2,7 @@
 <div class="feature-item">
     <div class="feature-pic set-bg" [ngStyle]="{'background-image': 'url(' + srcImage + ')'}">
         <div class="sale-notic">FOR SALE</div>
-        <div class="rent-notic">FOR RENT</div>
+        <!-- <div class="rent-notic">FOR RENT</div> -->
     </div>
     <div class="feature-text">
         <div class="text-center feature-title">
