--- a/frontend/src/app/pages/home/home.component.html
+++ b/frontend/src/app/pages/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="" *ngIf="products.length > 0">
+<div class="" *ngIf="products.length > 0 && category.length > 0">
     <app-page-top [descriptions]="bindDescriptionsToPagetop" [isHomePage]="true"
         header="TÌM NƠI CỦA BẠN VỚI PHONG CÁCH SỐNG ĐỊA PHƯƠNG CỦA CHÚNG TÔI" imgPageTop="../../../assets/bg.jpg"
         (viewDetail)="click()">
@@ -78,23 +78,23 @@
                 <p>Nhà và căn hộ để bán và cho thuê trong khu vực của bạn</p>
             </div>
             <div class="row">
-                <div class="col-lg-4 col-md-6">
-                    <app-featured-card srcImage="1.jpg"></app-featured-card>
+                <div class="col-md-6">
+                    <app-property-card [data]="products[0]"></app-property-card>
                 </div>
-                <div class="col-lg-4 col-md-6">
-                    <app-featured-card srcImage="2.jpg"></app-featured-card>
+                <div class="col-md-6">
+                    <app-property-card [data]="products[1]"></app-property-card>
                 </div>
-                <div class="col-lg-4 col-md-6">
-                    <app-featured-card srcImage="3.jpg"></app-featured-card>
+                <div class="col-md-6">
+                    <app-property-card [data]="products[2]"></app-property-card>
                 </div>
-                <div class="col-lg-4 col-md-6">
-                    <app-featured-card srcImage="4.jpg"></app-featured-card>
+                <div class="col-md-6">
+                    <app-property-card [data]="products[3]"></app-property-card>
                 </div>
-                <div class="col-lg-4 col-md-6">
-                    <app-featured-card srcImage="5.jpg"></app-featured-card>
+                <div class="col-md-6">
+                    <app-property-card [data]="products[4]"></app-property-card>
                 </div>
-                <div class="col-lg-4 col-md-6">
-                    <app-featured-card srcImage="6.jpg"></app-featured-card>
+                <div class="col-md-6">
+                    <app-property-card [data]="products[5]"></app-property-card>
                 </div>
             </div>
         </div>
@@ -108,20 +108,24 @@
             </div>
             <div class="row text-center">
                 <div class="col-lg-3 col-md-6 f-cata">
-                    <img src="../../../assets/feature-cate/1.jpg" alt="" class="fit-img">
-                    <h5>Căn hộ cho thuê</h5>
+                    <a [routerLink]="['/product/'+category[0].title,{cateId: category[0].url_encode}]"><img
+                            src="../../../assets/feature-cate/1.jpg" alt="" class="fit-img"></a>
+                    <h5>Chung cư</h5>
                 </div>
                 <div class="col-lg-3 col-md-6 f-cata">
-                    <img src="../../../assets/feature-cate/2.jpg" alt="" class="fit-img">
-                    <h5>Nhà dân</h5>
+                    <a [routerLink]="['/product/'+category[1].title,{cateId: category[1].url_encode}]"><img
+                            src="../../../assets/feature-cate/2.jpg" alt="" class="fit-img"></a>
+                    <h5>Nhà riêng</h5>
                 </div>
                 <div class="col-lg-3 col-md-6 f-cata">
-                    <img src="../../../assets/feature-cate/3.jpg" alt="" class="fit-img">
-                    <h5>Resort/Villa</h5>
+                    <a [routerLink]="['/product/'+category[2].title,{cateId: category[2].url_encode}]"><img
+                            src="../../../assets/feature-cate/3.jpg" alt="" class="fit-img"></a>
+                    <h5>Biệt thự</h5>
                 </div>
                 <div class="col-lg-3 col-md-6 f-cata">
-                    <img src="../../../assets/feature-cate/4.jpg" alt="" class="fit-img">
-                    <h5>Tòa nhà văn phòng</h5>
+                    <a [routerLink]="['/product/'+category[3].title,{cateId: category[3].url_encode}]"><img
+                            src="../../../assets/feature-cate/4.jpg" alt="" class="fit-img"></a>
+                    <h5>Nhà mặt phố</h5>
                 </div>
             </div>
         </div>
