--- a/frontend/src/app/layouts/footer/footer.component.html
+++ b/frontend/src/app/layouts/footer/footer.component.html
@@ -28,11 +28,11 @@
                 <div class="double-menu-widget">
                     <h5 class="fw-title">ĐỊA ĐIỂM PHỔ BIẾN</h5>
                     <ul>
-                        <li><a href="">TP. Hồ Chí Minh</a></li>
-                        <li><a href="">Hà Nội</a></li>
-                        <li><a href="">Vũng Tàu</a></li>
-                        <li><a href="">Đồng Nai</a></li>
-                        <li><a href="">Bình Dương</a></li>
+                        <li><a [routerLink]="['/product/search',{name: 'Hồ Chí Minh'}]" >TP. Hồ Chí Minh</a></li>
+                        <li><a [routerLink]="['/product/search',{name: 'Hà Nội'}]">Hà Nội</a></li>
+                        <li><a [routerLink]="['/product/search',{name: 'Vũng Tàu'}]">Vũng Tàu</a></li>
+                        <li><a [routerLink]="['/product/search',{name: 'Đồng Nai'}]">Đồng Nai</a></li>
+                        <li><a [routerLink]="['/product/search',{name: 'Bình Dương'}]">Bình Dương</a></li>
                     </ul>
                 </div>
             </div>
