--- a/frontend/src/app/pages/product/product.component.html
+++ b/frontend/src/app/pages/product/product.component.html
@@ -5,7 +5,13 @@
         <app-breadcrumb></app-breadcrumb>
 
         <div *ngIf="products.length == 0" class="row justify-content-center">
-            <h2>Không có bất kì tin nào</h2>
+            <form class="form-inline my-2 justify-content-center mb-2 col-12" [formGroup]="searchForm"
+                (ngSubmit)="search(searchForm)">
+                <input class="form-control mr-sm-2" type="search" placeholder="Tìm kiếm ..." aria-label="Search"
+                    style="width: 30%;" formControlName="searchTerm">
+                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Tìm kiếm</button>
+            </form>
+            <h2 class="col-12 text-center mt-5 mb-5">Không có bất kì tin nào</h2>
         </div>
         <div *ngIf="products.length > 0" class="">
             <form class="form-inline my-2 justify-content-center mb-2" [formGroup]="searchForm"
