--- a/frontend/src/app/pages/home/home.component.html
+++ b/frontend/src/app/pages/home/home.component.html
@@ -3,7 +3,7 @@
         header="TÌM NƠI CỦA BẠN VỚI PHONG CÁCH SỐNG ĐỊA PHƯƠNG CỦA CHÚNG TÔI" imgPageTop="../../../assets/bg.jpg"
         (viewDetail)="click()">
     </app-page-top>
-    <app-filter-section></app-filter-section>
+    <app-filter-section (selectedAddress)="onAddress($event)" (selectedDistrict)="onDistrict($event)"></app-filter-section>
     <section class="pt-5 mt-5">
         <div class="container">
             <div class="section-title text-center">
